# twitch-tray

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  PLAN_KDE_PLASMOID.md  README.md  TODO.md  deny.toml  go.mod  go.sum  prompt  version.go
.github/workflows/: ci.yml  release.yml
assets/: README.md  assets.go
cmd/twitch-tray/: main.go
crates/twitch-app-tauri/: Cargo.toml  tauri.conf.json
crates/twitch-app-tauri/src/: app_services.rs  commands.rs  display.rs  lib.rs  main.rs  test_helpers.rs
crates/twitch-app-tauri/tests/common/: mod.rs
crates/twitch-backend/: Cargo.toml
crates/twitch-backend/src/: app_services.rs  backend.rs  config.rs  db.rs  events.rs  handle.rs  hotness_detection.rs  lib.rs  notification_dispatcher.rs  notification_filter.rs  notify.rs  schedule_inference.rs  schedule_walker.rs  session.rs  state.rs  test_helpers.rs
crates/twitch-backend/src/auth/: deviceflow.rs  store.rs
crates/twitch-backend/src/twitch/: client.rs  http.rs  mod.rs  types.rs
crates/twitch-kde/: Cargo.toml  tauri.conf.json
crates/twitch-kde/capabilities/: default.json
crates/twitch-kde/plasmoid/: metadata.json
crates/twitch-kde/plasmoid/contents/tests/: MockDbusService.qml  tst_CategoryItem.qml  tst_CompactRepresentation.qml  tst_ExpandableSection.qml  tst_FullRepresentation.qml  tst_LoginView.qml  tst_ScheduleItem.qml  tst_SectionHeader.qml  tst_StreamItem.qml  tst_StreamRow.qml  tst_StreamerAvatar.qml
crates/twitch-kde/plasmoid/contents/ui/: CategoryItem.qml  CompactRepresentation.qml  ExpandableSection.qml  FullRepresentation.qml  LoginView.qml  ScheduleItem.qml  ScrollingLabel.qml  SectionHeader.qml  StreamItem.qml  StreamRow.qml  StreamerAvatar.qml  main.qml  qmldir
crates/twitch-kde/src/: dbus_service.rs  dto.rs  lib.rs  main.rs  plasmoid_state.rs
crates/twitch-kde/tests/: dbus_integration.rs
crates/twitch-menu-tauri/: Cargo.toml
crates/twitch-menu-tauri/src/: display_state.rs  lib.rs
crates/twitch-menu-tauri/src/tray/: mod.rs
crates/twitch-settings-tauri/: Cargo.toml
crates/twitch-settings-tauri/src/: commands.rs  lib.rs  mock.rs  window.rs
features/: streamer-hotness.md
internal/app/: app.go
internal/auth/: auth.go  deviceflow.go  deviceflow_test.go
internal/config/: config.go
internal/eventsub/: client.go  handlers.go  subscriptions.go
internal/notify/: notify.go
internal/state/: state.go
internal/tray/: handlers.go  menu.go  tray.go
internal/twitch/: client.go  schedule.go  streams.go  types.go
src/: index.html  settings.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app.rs  app_services.rs  commands.rs  config.rs  db.rs  display.rs  display_state.rs  history.rs  lib.rs  main.rs  notification_dispatcher.rs  notification_filter.rs  notify.rs  schedule_inference.rs  schedule_walker.rs  state.rs  time.rs  tray.rs
src-tauri/src/auth/: deviceflow.rs  mod.rs  store.rs
src-tauri/src/testutil/: builders.rs  fixtures.rs  mocks.rs  mod.rs
src-tauri/src/tray/: menu_data.rs  mod.rs
src-tauri/src/twitch/: client.rs  http.rs  mod.rs  types.rs
src-tauri/tests/: acceptance_stream_display.rs  state_management.rs
src-tauri/tests/common/: mod.rs
