[workspace]
members = [
    "crates/twitch-backend",
    "crates/twitch-menu-tauri",
    "crates/twitch-settings-tauri",
    "crates/twitch-app-tauri",
    "crates/twitch-kde",
]
resolver = "2"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
# Allow noisy pedantic lints that don't improve code quality
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"
doc_markdown = "allow"
# Casts are pervasive between SQLite i64, Twitch API u64, and display f64 — allow them
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
# These are too noisy for our codebase
too_many_lines = "allow"
unnecessary_wraps = "allow"
unused_async = "allow"
unused_self = "allow"
implicit_hasher = "allow"
