[package]
name = "twitch-tray"
version = "0.1.0"
description = "A cross-platform system tray application for Twitch viewers"
authors = [""]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync", "macros"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "3"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
open = "5"
urlencoding = "2"
png = "0.17"
async-trait = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = "4"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
