[package]
name = "twitch-tray"
version = "0.1.0"
description = "A cross-platform system tray application for Twitch viewers"
authors = [""]
edition = "2021"
rust-version = "1.91"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
twitch-backend = { path = "../twitch-backend" }
twitch-menu-tauri = { path = "../twitch-menu-tauri" }
twitch-settings-tauri = { path = "../twitch-settings-tauri" }
tauri = { version = "2", features = ["tray-icon"] }
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
serde_json = "1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
