[package]
name = "twitch-kde"
version = "0.1.0"
publish = false
edition = "2021"
rust-version = "1.91"

[lib]
name = "twitch_kde"
path = "src/lib.rs"

[[bin]]
name = "twitch-kde"
path = "src/main.rs"

[dependencies]
twitch-backend = { path = "../twitch-backend" }
twitch-settings-tauri = { path = "../twitch-settings-tauri" }
tauri = { version = "2", features = [] }
zbus = { version = "4", features = ["tokio", "p2p"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync", "macros", "net"] }
anyhow = "1"
open = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
futures-util = "0.3"

[lints]
workspace = true
