[package]
name = "twitch-settings-tauri"
version = "0.1.0"
publish = false
edition = "2021"
rust-version = "1.91"

[dependencies]
twitch-backend = { path = "../twitch-backend" }
tauri = { version = "2", features = ["tray-icon"] }
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync", "macros"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
anyhow = "1"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"

[lints]
workspace = true
